<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="local.darwin.quizoology.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/q1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/q1_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/q1_a"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/q2"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/q2_a_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_rat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_a1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_a2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_a3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_snake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_a4"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/q3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q3_a1_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q3_a2_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q3_a3_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q3_a4_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a4"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/q4"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_giraffe"
                android:scaleType="fitXY"
                android:src="@drawable/giraffe" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_lion"
                android:scaleType="fitXY"
                android:src="@drawable/lion" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/q4_a_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_giraffe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_lion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a2"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="checkAnswers"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>
